# matrix-oxide

./: .env.example  .gitignore  Cargo.toml
client-api/: Cargo.toml
client-api/src/: lib.rs  main.rs  sync.rs  sync_manager.rs  token_info.rs
gateway/: Cargo.toml
gateway/src/: config.rs  key_manager.rs  lib.rs  main.rs
server-api/: Cargo.toml
server-api/src/: main.rs
src/: config.rs  key_manager.rs  lib.rs  main.rs
