[workspace]
resolver = "3"
members = ["client-api", "gateway", "server-api"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
axum = "0.8.1"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
dns-lookup = "2.0.4"
http-body-util = "0.1.2"
base64 = "0.22.1"
chrono = "0.4.39"