[package]
name = "client-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
dns-lookup = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
tower-default-headers = "0.2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
