[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
dns-lookup = { workspace = true }
http-body-util = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["digest", "pem", "pkcs8", "rand_core"] }
rand = "0.8.5"
